--- a/source/SomeBank.AkkaNet/SomeBank.AkkaNet.csproj
+++ b/source/SomeBank.AkkaNet/SomeBank.AkkaNet.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DB8356B9-AEDC-4ACE-B8F2-859C30EEECF3}</ProjectGuid>
+    <ProjectGuid>{40AE9C50-7C3B-4840-A46D-74ECBC4B6605}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SomeBank.Domains.Accounts</RootNamespace>
-    <AssemblyName>SomeBank.Domains.Accounts</AssemblyName>
+    <RootNamespace>SomeBank.AkkaNet</RootNamespace>
+    <AssemblyName>SomeBank.AkkaNet</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -34,16 +34,16 @@
       <HintPath>..\packages\Akka.1.1.2\lib\net45\Akka.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Chessie, Version=0.6.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Chessie.0.6.0\lib\net40\Chessie.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="FSharp.Core, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\FSharp.Core.4.0.0.1\lib\net40\FSharp.Core.dll</HintPath>
+    <Reference Include="Akka.Logger.Serilog, Version=1.1.2.6, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Akka.Logger.Serilog.1.1.2\lib\net45\Akka.Logger.Serilog.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Serilog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
+      <HintPath>..\packages\Serilog.2.3.0\lib\net45\Serilog.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -60,38 +60,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Actors\AccountActor.cs" />
-    <Compile Include="Actors\AccountsBoundedContextActor.cs" />
-    <Compile Include="Actors\TransferActor.cs" />
-    <Compile Include="Commands\CreateAccountCommand.cs" />
-    <Compile Include="Commands\TransferBetweenAccountsCommand.cs" />
-    <Compile Include="Commands\TransferConfirmation.cs" />
-    <Compile Include="Messages.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Messages.resx</DependentUpon>
-    </Compile>
+    <Compile Include="Actors\AggregateRootActor.cs" />
+    <Compile Include="Actors\BoundedContextActor.cs" />
+    <Compile Include="Actors\SupervisorActor.cs" />
+    <Compile Include="Actors\TransactionActor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SomeBank.AkkaUtils\SomeBank.AkkaNet.csproj">
-      <Project>{40ae9c50-7c3b-4840-a46d-74ecbc4b6605}</Project>
-      <Name>SomeBank.AkkaNet</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SomeBank.Domains.Accounts.Data\SomeBank.Accounts.fsproj">
-      <Project>{bcbe4fd9-30e0-4196-a45e-80d19631e50f}</Project>
-      <Name>SomeBank.Accounts</Name>
-    </ProjectReference>
+    <Compile Include="Utils\SerilogUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Messages.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Messages.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
