--- a/source/SomeBank.Accounts.AkkaNet/packages.config
+++ b/source/SomeBank.Accounts.AkkaNet/packages.config
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Akka" version="1.1.2" targetFramework="net452" />
+  <package id="Akka.Persistence" version="1.1.2.30-beta" targetFramework="net452" />
+  <package id="Akka.Serialization.Wire" version="1.1.2.30-beta" targetFramework="net452" />
   <package id="Chessie" version="0.6.0" targetFramework="net452" />
   <package id="FSharp.Core" version="4.0.0.1" targetFramework="net452" />
+  <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.2.0" targetFramework="net452" />
+  <package id="Wire" version="0.7.1" targetFramework="net452" />
 </packages>
