--- a/source/SomeBank.Console/packages.config
+++ b/source/SomeBank.Console/packages.config
@@ -2,9 +2,13 @@
 <packages>
   <package id="Akka" version="1.1.2" targetFramework="net452" />
   <package id="Akka.Logger.Serilog" version="1.1.2" targetFramework="net452" />
+  <package id="Akka.Persistence" version="1.1.2.30-beta" targetFramework="net452" />
+  <package id="Akka.Serialization.Wire" version="1.1.2.30-beta" targetFramework="net452" />
+  <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="Serilog" version="2.3.0" targetFramework="net452" />
   <package id="Serilog.Sinks.ColoredConsole" version="2.0.0" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.2.0" targetFramework="net452" />
   <package id="Topshelf" version="4.0.2" targetFramework="net452" />
+  <package id="Wire" version="0.7.1" targetFramework="net452" />
 </packages>
